[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tubeupthosecomments"
dynamic = ["version"]
description = "A fork of tubeup that has comment archiving included"
authors = [
    {name = "Andres99"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "internetarchive",
    "docopt-ng",
    "tqdm",
    "yt-dlp[default,curl-cffi]",
]
keywords = [
    "archive.org",
    "archiving",
    "bibliotheca anonoma",
    "Andres99",
    "internet archive",
    "vod",
    "video",
    "youtube",
    "youtube-dl",
    "youtube-dlc",
    "yt-dlp",
    "comments",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/Andres9890/tubeupthosecomments"
source = "https://github.com/Andres9890/tubeupthosecomments.git"
issues = "https://github.com/Andres9890/tubeupthosecomments/issues"

[project.scripts]
tubeupthosecomments = "tubeupthosecomments.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "tubeupthosecomments.__version__"}
